First spring removal draft